Closed
Bug 983971
Opened 12 years ago
Closed 12 years ago
[system] the "download" indicator is not displayed
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
People
(Reporter: julienw, Assigned: sotaro)
References
Details
(Keywords: regression)
Attachments
(5 files)
We used to have a "network active" indicator when the phone was downloading/uploading. It's not displayed anymore in 1.4 (tested on Peak).
I don't know if that's expected but that's was certainly useful.
| Reporter | ||
Comment 1•12 years ago
|
||
Works fine in a 1.3 build (still on the peak).
QAWanted for testing on other devices.
Keywords: qawanted
Comment 2•12 years ago
|
||
We need clearer STR here.
Comment 3•12 years ago
|
||
Repro steps:
1) Proceed to the Marketplace
2) Download any app (I used Wikipedia)
3) Select the 'Free' button
4) Select 'Install'
5) Observe the notifications bar when downloading
I have included a screenshot with the 1.3 build and the 1.4 build.
The 1.3 build has the download icon that is animating, on 1.4 there is no icon.
Comment 4•12 years ago
|
||
1.4
Environmental Variables:
Device: Buri 1.4 MOZ
BuildID: 20140318000203
Gaia: c03a6af9028c4b74a84b5a98085bbb0c07261175
Gecko: 3776f72f1967
Version: 30.0a2
Firmware Version: V1.2-device.cfg
1.3
Environmental Variables:
Device: Buri 1.3 MOZ
BuildID: 20140319004003
Gaia: f2f2be55dcca1d6775592ef478948045935a91ed
Gecko: 87d90ecfe616
Version: 28.0
Firmware Version: V1.2-device.cfg
Keywords: qawanted
Updated•12 years ago
|
blocking-b2g: --- → 1.4?
Keywords: regressionwindow-wanted
Updated•12 years ago
|
blocking-b2g: 1.4? → 1.4+
Updated•12 years ago
|
Whiteboard: [systemsfe]
Updated•12 years ago
|
QA Contact: nkot
Comment 5•12 years ago
|
||
The following regression window was found using b2g-inbound builds:
~ Last Working ~
BuildID: 20140213063024
Gaia: 3c2e748e4d57551527366eba00428a0f5ccc4012
Gecko: 3fd6a4150f85
Version: 30.0a1
Firmware: V1.2-device.cfg
~ First Broken ~
BuildID: 20140213064824
Gaia: 3c2e748e4d57551527366eba00428a0f5ccc4012
Gecko: 935cb4d15364
Version: 30.0a1
Firmware: V1.2-device.cfg
Please note, the Gaia is the same so this is a Gecko regression!
Pushlog:
http://hg.mozilla.org/integration/b2g-inbound/pushloghtml?fromchange=3fd6a4150f85&tochange=935cb4d15364
Keywords: regressionwindow-wanted
Comment 6•12 years ago
|
||
Buri doesn't have seccomp enabled, so this has to be caused by bug 946720.
Blocks: 946720
Component: Gaia::System → Graphics: Layers
Product: Firefox OS → Core
Whiteboard: [systemsfe]
Version: unspecified → 30 Branch
Comment 8•12 years ago
|
||
Here is the logcat... though it seems like there are some other issues with Marketplace. Intermittently, I was unable to install the app at all, should investigate that more before filing a bug.
| Reporter | ||
Comment 9•12 years ago
|
||
Comment 10•12 years ago
|
||
I am working on dolphin + 1.4 branch and I notice that both network indicator and network activity can be displayed.
1.4 Environmental Variables:
Gaia a10224e21a5c2acca929508edaad35e471413ff0
Gecko 4159b06a14f441302348a33dded34a988ce6ce7a
BuildID 20140325144735
Version 30.0a2
Comment 11•12 years ago
|
||
I'm not sure dolphin is :), but if this is Buri/Peak only so far, perhaps its ICS specific. Assigning to Sotaro based on Comment 5.
Assignee: nobody → sotaro.ikeda.g
| Assignee | ||
Comment 12•12 years ago
|
||
The indocator are drawn as synchronous Image layer. In Bug 946720, I also changed to use gralloc buffer for Image Layer. It seems to affect it. Adreno 200 has a bug that can not render gralloc buffers of size from 9px to 16px. See Bug 873937. It might be affected.
| Assignee | ||
Comment 13•12 years ago
|
||
Confirmed the patch fixed the problem.
| Assignee | ||
Updated•12 years ago
|
Attachment #8398156 -
Flags: review?(nical.bugzilla)
Updated•12 years ago
|
Attachment #8398156 -
Flags: review?(nical.bugzilla) → review+
| Assignee | ||
Comment 15•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Comment 17•12 years ago
|
||
Needs a branch patch for Aurora uplift.
status-b2g-v1.4:
--- → affected
status-b2g-v2.0:
--- → fixed
status-firefox29:
--- → wontfix
status-firefox30:
--- → affected
status-firefox31:
--- → fixed
Flags: needinfo?(sotaro.ikeda.g)
Keywords: branch-patch-needed
| Assignee | ||
Comment 19•12 years ago
|
||
Comment on attachment 8399856 [details] [diff] [review]
patch for b2gv1.4 - Do not use gralloc for small size on ICS gonk
Carry "r=nical".
Attachment #8399856 -
Flags: review+
| Assignee | ||
Updated•12 years ago
|
Keywords: branch-patch-needed
Comment 20•12 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•