Bug 983971 - Do not use gralloc for small size on ICS gonk r=nical